objects/ssot__VehicleAssetCarbonFootprint__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AnnualEmssnInventoryId__c</fullName>
        <label>Annual Emissions Inventory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AuditApprovalStatus__c</fullName>
        <label>Audit Approval Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FootprintStage__c</fullName>
        <label>Footprint Stage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Vehicle Asset Carbon Footprint Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingDate__c</fullName>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReportingYear__c</fullName>
        <label>Reporting Year</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope1EmssnNumber__c</fullName>
        <label>Supl Scope 1 Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2LocBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Loc Based Emssn</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope2MktBasedEmssnNumber__c</fullName>
        <label>Supl Scope 2 Mkt-Based Emssn</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3DnstrmEmssnNumber__c</fullName>
        <label>Supl Scope 3 Dnstrm Emssn (tCO2e)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3UpstrmEmssnNumber__c</fullName>
        <label>Supl Scope 3 Upstrm Emssn (tCO2e)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleAssetEmssnSrcId__c</fullName>
        <label>Vehicle Asset Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VehicleType__c</fullName>
        <label>Vehicle Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383873373_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetCarbonFootprint_VehicleA_rel</label>
        <referenceTo>ssot__VehicleAssetEmissionsSource__dlm</referenceTo>
        <relationshipLabel>VehicleAssetCarbonFootprint_VehicleA_rel</relationshipLabel>
        <relationshipName>rel_1747383873373_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383879325_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VehicleAssetCarbonFootprint_AnnualEm_rel</label>
        <referenceTo>ssot__AnnualEmissionsInventory__dlm</referenceTo>
        <relationshipLabel>VehicleAssetCarbonFootprint_AnnualEm_rel</relationshipLabel>
        <relationshipName>rel_1747383879325_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>